--- a/astrophysics.html
+++ b/astrophysics.html
@@ -66,7 +66,7 @@
           these FRBs and to unravel their mystery...
         </p>
         <h3 id="approach">How did I approach it?</h3>
-        <p>To understand the FRB population, we needed to know which parts of that population we weren't seeing. I developed a code base called <a href="https://github.com/davidgardenier/frbpoppy">frbpoppy</a> to model intrinsic FRB populations, selection effects and simulate resulting observations.</p>
+        <p>To understand the FRB population, we needed to know which parts of the population we aren't seeing. I developed a code base called <a href="https://github.com/davidgardenier/frbpoppy">frbpoppy</a> to model intrinsic FRB populations, model selection effects and simulate the resulting observations.</p>
         <h3 id="colleagues">Who did I work with?</h3>
         <p>During my PhD I worked under the supervision of <a href="https://nl.wikipedia.org/wiki/Joeri_van_Leeuwen">Joeri van Leeuwen</a>, with the occasionally help from <a href="https://en.wikipedia.org/wiki/Michiel_van_der_Klis">Michiel van der Klis</a>. <a href="https://liamconnorastro.com/">Liam Connor</a> helped with formulating and testing ideas, <a href="https://www.linkedin.com/in/leon-oostrum-18842b104/">Leon Oostrum</a> with coding conundrums, and <a href="http://www.ebpetroff.com/">Emily Petroff</a> with general discussions.</p>
         <h3 id="thesis">Thesis</h3>
