--- a/work.html
+++ b/work.html
@@ -56,7 +56,7 @@
         <!-- <h3 id="job">What does my job entail?</h3>
         <p>To be decided!</p> -->
         <h3 id="interests">What are my interests?</h3>
-        <p>I enjoy helping others by tackling complex problems for them. Whether in terms of coding, developing policies, or teaching: I thrive in seeing the bigger picture and aiding others in understanding it. Clear communication is an essential part of this process for me, playing into my interest in graphic design and presentation skills.</p>
+        <p>I enjoy helping others by tackling complex problems for them. Whether in terms of coding, developing policies, or teaching: I thrive in understanding the bigger picture and aiding others towards it. Clear communication is an essential part of this process for me, playing into my interest in graphic design and presentation skills.</p>
         <!-- <h3 id="skills">What are my skills?</h3>
         <p class="icon mr solid fa-user" style='margin-bottom: 0em'>Project Management, Leading, Teaching, Presenting, Graphic Design</p>
         <p class="icon mr solid fa-code" style='margin-bottom: 0em'>Windows, Linux, Ubuntu, Python, Numpy, Scipy, Matplotlib, Bokeh, HTML, CSS, Bash, SQL</p>
