--- a/astrophysics.html
+++ b/astrophysics.html
@@ -58,7 +58,7 @@
           <li><a href="#teaching" class="button icon mr solid fa-chalkboard-teacher">Teaching</a></li>
           <!-- <li><a href="#teaching" class="button icon mr brands solid fa-orcid">Orcid</a></li> -->
         </ul>
-        <p>In 2021 I obtained a PhD in astrophysics, from work conducted at the Netherlands Institute for Radio Astronomy (ASTRON) and the University of Amsterdam (UvA).
+        <p>In 2021 I should obtain a PhD in astrophysics, from work conducted at the Netherlands Institute for Radio Astronomy (ASTRON) and the University of Amsterdam (UvA).
         </p>
         <h3 id="job">What did I do?</h3>
         <p>
