Adding 2de kamer workshop

--- a/astrophysics.html
+++ b/astrophysics.html
@@ -205,6 +205,7 @@
               </tr>
             </thead>
             <tbody>
+	      <tr><td>van Aula naar Binnenhof</td><td>Attendee</td><td>Online</td><td>17 Feb 2021</td></tr>
               <tr><td>FRB2020</td><td>Attendee</td><td>Online</td><td>23-27 Mar 2020</td></tr>
               <tr><td>Nova Fall School</td><td>Attendee</td><td>Amersfoort (NL)</td><td>28-29 Jun 2019</td></tr>
               <tr><td>Netherlands Astronomy Conference</td><td>Attendee</td><td>Groningen (NL)</td><td>27-29 May 2019</td></tr>
