--- a/astrophysics.html
+++ b/astrophysics.html
@@ -87,7 +87,7 @@
               <tr>
                 <td><i>D.W. Gardenier</td>
                   <!-- TODO: Update href -->
-                <td><a href="#">Studying Fast Radio Bursts through Population Synthesis</a></td>
+                <td><a href="https://dare.uva.nl/search?identifier=56bb2c50-f029-4f49-95f0-ef6b036aa266">Studying Fast Radio Bursts through Population Synthesis</a></td>
                 <td>2021</td>
                 <td>PhD Thesis, University of Amsterdam</td>
               </tr>
