--- a/astrophysics.html
+++ b/astrophysics.html
@@ -70,8 +70,7 @@
         <h3 id="colleagues">Who did I work with?</h3>
         <p>During my PhD I worked under the supervision of <a href="https://nl.wikipedia.org/wiki/Joeri_van_Leeuwen">Joeri van Leeuwen</a>, with the occasionally help from <a href="https://en.wikipedia.org/wiki/Michiel_van_der_Klis">Michiel van der Klis</a>. <a href="https://liamconnorastro.com/">Liam Connor</a> helped with formulating and testing ideas, <a href="https://www.linkedin.com/in/leon-oostrum-18842b104/">Leon Oostrum</a> with coding conundrums, and <a href="http://www.ebpetroff.com/">Emily Petroff</a> with general discussions.</p>
         <h3 id="thesis">Thesis</h3>
-        <!-- TODO Update href -->
-        <p>My thesis, entitled "Studying Fast Radio Bursts through Population Synthesis", can be found <a href="#">here</a>.</p>
+        <p>My thesis, entitled "Studying Fast Radio Bursts through Population Synthesis", can be found <a href="https://dare.uva.nl/search?identifier=56bb2c50-f029-4f49-95f0-ef6b036aa266">here</a>.</p>
         <h3 id="publications">Publications</h3>
         <div class="table-wrapper">
           <table>
@@ -86,7 +85,6 @@
             <tbody>
               <tr>
                 <td><i>D.W. Gardenier</td>
-                  <!-- TODO: Update href -->
                 <td><a href="https://dare.uva.nl/search?identifier=56bb2c50-f029-4f49-95f0-ef6b036aa266">Studying Fast Radio Bursts through Population Synthesis</a></td>
                 <td>2021</td>
                 <td>PhD Thesis, University of Amsterdam</td>
