--- a/astrophysics.html
+++ b/astrophysics.html
@@ -239,7 +239,7 @@
             <tbody>
               <tr><td>Speaker</td><td><a href="https://www.youtube.com/watch?v=uJBwzn0nuiY&t=51s">TEDxAmstelveen</a></td><td>Amstelveen (NL)</td><td>2020</td></tr>
               <tr><td>Outreach activities</td><td>Public Campaign for the Dutch National Research Agenda</td><td>Rotterdam (NL)</td><td>2019</td></tr>
-              <tr><td>Speaker</td><td>IMC Weekend School</td><td>Amsterdam (NL)</td><td>2019</td></tr>
+              <tr><td>Speaker</td><td>IMC Weekend School</td><td>Amsterdam (NL)</td><td>2019-2021</td></tr>
               <tr><td>Speaker</td><td>Pitch Night TEDxAUCollege</td><td>Amsterdam University College (NL)</td><td>2019</td></tr>
               <tr><td>Speaker</td><td>BSc Orientation</td><td>U. of Amsterdam (NL)</td><td>2017</td></tr>
               <tr><td>Stargazing activities</td><td>Royal Concertgebouw Orchestra: Multiverse</td><td>Amsterdam (NL)</td><td>2017</td></tr>
