Better word usage

--- a/fencing.html
+++ b/fencing.html
@@ -56,7 +56,7 @@
         <p><a href="http://www.schermcentrumamsterdam.nl/">SchermCentrum Amsterdam</a> is the largest fencing club in the Netherlands, with 200+ members. SCA features youth to senior, recreational to Olympic, and foil to sabre to epee fencers.
         </p>
         <p>
-          As chairman of SCA, I am tasked with keeping the bigger picture in sight. Whether by overlooking monthly projects, crafting policies or representing SCA on a national scale, I help SCA build towards the future.
+          As chairman of SCA, I am tasked with keeping the bigger picture in sight. Whether by supervising monthly projects, crafting policies or representing SCA on a national scale, I help SCA build towards the future.
         </p>
         <p>
         Prior to fencing at SCA, I fenced at the Amsterdam Student Fencing Club Esprit (<a href="https://assvesprit.nl/">ASSV Esprit</a>), which I chaired from 2014 to 2016.
