Removing UvA contact details

--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,9 @@
         <h1>Get in touch</h1>
         <!-- <span class="image right"><img src="images/dish_bg.png" alt="" /></span> -->
         <ul class="actions">
-          <li><a href="mailto:D.W.Gardenier@uva.nl" class="button icon mr fa-envelope" style="text-transform: none">D.W.Gardenier@uva.nl</a></li>
-          <li><a href="https://api.uva.nl/contact/route/route.html" class="button icon mr fa-building" style="text-transform: none">Office C4.148</a></li>
-          <li><a href="https://goo.gl/ns1pdG" class="button icon mr solid fa-map-marker-alt" style="text-transform: none">Science Park 904</a></li>
+          <li><a href="mailto:davidgardenier@gmail.com" class="button icon mr fa-envelope" style="text-transform: none">davidgardenier@gmail.com</a></li>
+<!--           <li><a href="https://api.uva.nl/contact/route/route.html" class="button icon mr fa-building" style="text-transform: none">Office C4.148</a></li> -->
+<!--           <li><a href="https://goo.gl/ns1pdG" class="button icon mr solid fa-map-marker-alt" style="text-transform: none">Science Park 904</a></li> -->
           <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon mr brands fa-linkedin"  style="text-transform: none">LinkedIn</a></li>
           <li><a href="https://github.com/davidgardenier" class="button icon brands fa-github"  style="text-transform: none">Github</a></li>
           <li><a href="https://www.facebook.com/david.gardenier" class="button icon brands fa-facebook"  style="text-transform: none">Facebook</a></li>
