--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
           <!-- <li><a href="#skills" class="button icon solid fa-cogs">Skills</a></li> -->
           <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon brands fa-linkedin">LinkedIn</a></li>
         </ul>
-        <p>After completing a PhD in astrophysics in 2021, I will be starting as an AI consultant at Deloitte from September onwards. Exciting times!</p>
+        <p>After completing a PhD in astrophysics in 2021, I have started working as an AI consultant at Deloitte, an exciting place from which to explore the industry!</p>
         <!-- <h3 id="job">What does my job entail?</h3>
         <p>To be decided!</p> -->
         <h3 id="interests">What are my interests?</h3>
