--- a/work.html
+++ b/work.html
@@ -47,14 +47,14 @@
       <div class="inner">
         <h1>Work</h1>
         <ul class="actions" style="margin-bottom: 1em;">
-          <!-- <li><a href="#job" class="button icon solid fa-briefcase">Job</a></li> -->
+          <li><a href="#job" class="button icon solid fa-briefcase">Job</a></li>
           <li><a href="#interests" class="button icon solid fa-lightbulb">Interests</a></li>
           <!-- <li><a href="#skills" class="button icon solid fa-cogs">Skills</a></li> -->
           <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon brands fa-linkedin">LinkedIn</a></li>
         </ul>
-        <p>After completing a PhD in astrophysics in 2021, I have started working as an AI consultant at Deloitte, an exciting place from which to explore the industry!</p>
-        <!-- <h3 id="job">What does my job entail?</h3>
-        <p>To be decided!</p> -->
+        <p>Since completing a PhD in astrophysics in 2021, I have started work as an AI consultant at Deloitte.</p>
+        <h3 id="job">What does my job entail?</h3>
+        <p>Through advanced analytics and machine learning, I help clients from across various industries in tackling their challenges.</p>
         <h3 id="interests">What are my interests?</h3>
         <p>I enjoy helping others by tackling complex problems for them. Whether in terms of coding, developing policies, or teaching: I thrive in understanding the bigger picture and aiding others towards it. Clear communication is an essential part of this process for me, playing into my interest in graphic design and presentation skills.</p>
         <!-- <h3 id="skills">What are my skills?</h3>
