--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,18 @@
     <div id="main">
       <div class="inner">
         <h1>Get in touch</h1>
-        <!-- <span class="image right"><img src="images/dish_bg.png" alt="" /></span> -->
+        <h2>Email</h2>
+        <form action="https://formspree.io/f/xpzkewye" method="POST">
+          <label>
+            Your email address: <input type="email" name="_replyto">
+          </label>
+          <label>
+            Your message: <textarea name="message"></textarea>
+          </label>
+          <button class="button icon regular fa-paper-plane" type="submit">Send</button>
+        </form>
+        <h2>Online platforms</h2>
         <ul class="actions">
-          <li><a href="mailto:davidgardenier@gmail.com" class="button icon mr fa-envelope" style="text-transform: none">davidgardenier@gmail.com</a></li>
-<!--           <li><a href="https://api.uva.nl/contact/route/route.html" class="button icon mr fa-building" style="text-transform: none">Office C4.148</a></li> -->
-<!--           <li><a href="https://goo.gl/ns1pdG" class="button icon mr solid fa-map-marker-alt" style="text-transform: none">Science Park 904</a></li> -->
           <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon mr brands fa-linkedin"  style="text-transform: none">LinkedIn</a></li>
           <li><a href="https://github.com/davidgardenier" class="button icon brands fa-github"  style="text-transform: none">Github</a></li>
           <li><a href="https://www.facebook.com/david.gardenier" class="button icon brands fa-facebook"  style="text-transform: none">Facebook</a></li>
