--- a/fencing.html
+++ b/fencing.html
@@ -51,12 +51,12 @@
           <li><a href="#club" class="button icon solid fa-users">Club</a></li>
           <li><a href="#trainer" class="button icon solid fa-chalkboard-teacher">Trainer</a></li>
         </ul>
-        <p>I fence on sabre, a weapon going so fast that milliseconds can separate a hit from being valid or not! I play an active role in the Dutch fencing world and am currently the chairman of SchermCentrum Amsterdam (SCA). In 2016, I led the men's team to silver at the Dutch national championships, and am looking to improve on that...</p>
+        <p>I fence on sabre, a weapon going so fast that milliseconds can separate a hit from being valid or not! I play an active role in the Dutch fencing world and am a former chairman of SchermCentrum Amsterdam (SCA). In 2016, I led the men's team to silver at the Dutch national championships, and am looking to improve on that...</p>
         <h3 id="club">Club</h3>
         <p><a href="http://www.schermcentrumamsterdam.nl/">SchermCentrum Amsterdam</a> is the largest fencing club in the Netherlands, with 200+ members. SCA features youth to senior, recreational to Olympic, and foil to sabre to epee fencers.
         </p>
         <p>
-          As chairman of SCA, I am tasked with keeping the bigger picture in sight. Whether by supervising monthly projects, crafting policies or representing SCA on a national scale, I help SCA build towards the future.
+          As former chairman of SCA, I was tasked with keeping the bigger picture in sight. Whether by supervising monthly projects, crafting policies or representing SCA on a national scale, I helped SCA build towards the future.
         </p>
         <p>
         Prior to fencing at SCA, I fenced at the Amsterdam Student Fencing Club Esprit (<a href="https://assvesprit.nl/">ASSV Esprit</a>), which I chaired from 2014 to 2016.
