--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,8 @@
         </form>
         <h2>Online platforms</h2>
         <ul class="actions">
-          <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon mr brands fa-linkedin"  style="text-transform: none">LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/david-gardenier" class="button icon mr brands fa-linkedin"  style="text-transform: none">LinkedIn</a></li>
           <li><a href="https://github.com/davidgardenier" class="button icon brands fa-github"  style="text-transform: none">Github</a></li>
-          <li><a href="https://www.facebook.com/david.gardenier" class="button icon brands fa-facebook"  style="text-transform: none">Facebook</a></li>
         </ul>
       </div>
     </div>
