--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 		<div class="centeredbox fullpage profile" id="main">
 			<div class="item centeredbox pic">
-				<img src="images/david.jpg" alt="" />
+				<img src="images/david.png" alt="" />
 			</div>
 			<div class="item centeredbox">
 				<h1 style="text-align: center;">David Gardenier</h1>
