--- a/work.html
+++ b/work.html
@@ -52,11 +52,11 @@
           <!-- <li><a href="#skills" class="button icon solid fa-cogs">Skills</a></li> -->
           <li><a href="https://www.linkedin.com/in/david-gardenier-913982112/" class="button icon brands fa-linkedin">LinkedIn</a></li>
         </ul>
-        <p>Since completing a PhD in astrophysics in 2021, I have started work as an AI consultant at Deloitte.</p>
+        <p>Since completing a PhD in astrophysics in 2021, I've worked as an AI consultant at Deloitte. I was appointed within a year to lead the Machine Learning Engineering Competence Center (30+ people), and promoted to senior AI consultant in the same year.</p>
         <h3 id="job">What does my job entail?</h3>
         <p>Through advanced analytics and machine learning, I help clients from across various industries in tackling their challenges.</p>
         <h3 id="interests">What are my interests?</h3>
-        <p>I enjoy helping others by tackling complex problems for them. Whether in terms of coding, developing policies, or teaching: I thrive in understanding the bigger picture and aiding others towards it. Clear communication is an essential part of this process for me, playing into my interest in graphic design and presentation skills.</p>
+        <p>I enjoy helping others by tackling complex problems for them. Whether in terms of coding, developing policies, supervising or teaching: I thrive in understanding the bigger picture and aiding others towards it. Clear communication is an essential part of this process for me, playing into my interest in graphic design and presentation skills.</p>
         <!-- <h3 id="skills">What are my skills?</h3>
         <p class="icon mr solid fa-user" style='margin-bottom: 0em'>Project Management, Leading, Teaching, Presenting, Graphic Design</p>
         <p class="icon mr solid fa-code" style='margin-bottom: 0em'>Windows, Linux, Ubuntu, Python, Numpy, Scipy, Matplotlib, Bokeh, HTML, CSS, Bash, SQL</p>
@@ -64,20 +64,6 @@
         <p class="icon mr solid fa-comment" style='margin-bottom: 0em'>English, Dutch</p> -->
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="inner">
-        <ul class="copyright">
-          <li>&copy; David Gardenier</li>
-          <li>Last updated in <script>
-              document.write(new Date().getFullYear())
-            </script>
-          </li>
-          <li>Design based on HTML5 UP</li>
-        </ul>
-      </div>
-    </footer>
 
   </div>
 
