--- a/contact.html
+++ b/contact.html
@@ -1,78 +1,79 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="David Gardenier" />
+    <title>Contact David Gardenier</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <style>
+      html {
+        font-size: 1.1rem;
+      }
+    </style>
+  </head>
 
-<head>
-  <title>Contact</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <noscript>
-    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-
-<body class="is-preload">
-  <!-- Wrapper -->
-  <div id="wrapper">
-    <!-- Header -->
-    <header id="header">
-      <div class="inner">
-        <!-- Nav -->
-        <nav>
-          <ul>
-            <li><a href="#menu">Menu</a></li>
-          </ul>
-        </nav>
-
-      </div>
-    </header>
-
-    <!-- Menu -->
-		<nav id="menu">
-			<ul>
-				<li><a href="index.html" class="primary icon mr solid fa-home">Home</a></li>
-				<li><a href="work.html" class="primary icon mr solid fa-briefcase">Work</a></li>
-				<li><a href="astrophysics.html" class="primary icon mr solid fa-star">Astrophysics</a></li>
-				<li><a href="fencing.html" class="primary icon mr solid fa-medal">Fencing</a></li>
-				<li><a href="contact.html" class="primary icon mr solid fa-address-card">Contact</a></li>
-			</ul>
-		</nav>
-
-    <!-- Main -->
-    <div id="main">
-      <div class="inner">
-        <h1>Get in touch</h1>
-        <h2>Email</h2>
-        <form action="https://formspree.io/f/xpzkewye" method="POST">
-          <label>
-            Your email address: <input type="email" name="_replyto">
-          </label>
-          <label>
-            Your message: <textarea name="message"></textarea>
-          </label>
-          <button class="button icon regular fa-paper-plane" type="submit">Send</button>
-        </form>
-        <h2>Online platforms</h2>
-        <ul class="actions">
-          <li><a href="https://www.linkedin.com/in/david-gardenier" class="button icon mr brands fa-linkedin"  style="text-transform: none">LinkedIn</a></li>
-          <li><a href="https://github.com/davidgardenier" class="button icon brands fa-github"  style="text-transform: none">Github</a></li>
+  <body class="bg-light">
+    <div class="col-10 col-lg-8 mx-auto py-md-3">
+      <header
+        class="d-flex flex-wrap align-items-center justify-content-end justify-content-md-between py-3 mb-4"
+      >
+        <ul
+          class="nav col mb-2 justify-content-center justify-content-md-end mb-md-0"
+        >
+          <li>
+            <a href="index.html" class="nav-link px-2 link-dark">Home</a>
+          </li>
+          <li>
+            <a href="about.html" class="nav-link px-2 link-dark">About</a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link px-2 link-secondary"
+              >Contact</a
+            >
+          </li>
         </ul>
-      </div>
+      </header>
+      <main>
+        <div class="row g-5">
+          <div class="col-sm-6 mx-auto">
+            <form action="https://formspree.io/f/xpzkewye" method="POST">
+              <div class="row g-3 mb-3">
+                <div class="col-sm-12">
+                  <label class="form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="you@example.com"
+                    name="_replyto"
+                    required
+                  />
+                </div>
+
+                <div class="col-sm-12">
+                  <label class="form-label">Message</label>
+                  <textarea
+                    type="text"
+                    class="form-control"
+                    placeholder="Your message"
+                    name="message"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+              <button class="btn btn-outline-success" type="submit">
+                Send
+              </button>
+            </form>
+          </div>
+        </div>
+      </main>
     </div>
-
-  </div>
-
-  <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/browser.min.js"></script>
-  <script src="assets/js/breakpoints.min.js"></script>
-  <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
