--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
-<!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <meta name="author" content="David Gardenier" />
+    <title>David Gardenier</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <style>
+      html {
+        font-size: 1.1rem;
+      }
+    </style>
+  </head>
 
-<head>
-	<title>David Gardenier</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-
-<body class="is-preload">
-	<!-- Wrapper -->
-	<div id="wrapper">
-
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<!-- Nav -->
-				<nav>
-					<ul>
-						<li><a href="#menu">Menu</a></li>
-					</ul>
-				</nav>
-
-			</div>
-		</header>
-
-		<!-- Menu -->
-		<nav id="menu">
-			<ul>
-				<li><a href="index.html" class="primary icon mr solid fa-home">Home</a></li>
-				<li><a href="work.html" class="primary icon mr solid fa-briefcase">Work</a></li>
-				<li><a href="astrophysics.html" class="primary icon mr solid fa-star">Astrophysics</a></li>
-				<li><a href="fencing.html" class="primary icon mr solid fa-medal">Fencing</a></li>
-				<li><a href="contact.html" class="primary icon mr solid fa-address-card">Contact</a></li>
-			</ul>
-		</nav>
-
-		<div class="centeredbox fullpage profile" id="main">
-			<div class="item centeredbox pic">
-				<img src="images/david.png" alt="" />
-			</div>
-			<div class="item centeredbox">
-				<h1 style="text-align: center;">David Gardenier</h1>
-			</div>
-			<div class="item centeredbox" >
-				<ul class="actions special" style="width: 60%">
-					<li><a href="work.html" class="button icon mr solid fa-briefcase">Work</a></li>
-					<li><a href="astrophysics.html" class="button icon mr solid fa-star">Astrophysics</a></li>
-					<li><a href="fencing.html" class="button icon mr solid fa-medal">Fencing</a></li>
-					<li><a href="contact.html" class="button primary icon mr solid fa-address-card">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+  <body class="bg-light">
+    <div class="col-10 col-lg-8 mx-auto py-md-3">
+      <header
+        class="d-flex flex-wrap align-items-center justify-content-end justify-content-md-between py-3 mb-4"
+      >
+        <ul
+          class="nav col mb-2 justify-content-center justify-content-md-end mb-md-0"
+        >
+          <li>
+            <a href="index.html" class="nav-link px-2 link-secondary">Home</a>
+          </li>
+          <li>
+            <a href="about.html" class="nav-link px-2 link-dark">About</a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link px-2 link-dark">Contact</a>
+          </li>
+        </ul>
+      </header>
+      <main>
+        <div class="row align-items-center">
+          <div class="col px-4 my-5 text-center">
+            <img
+              class="d-block mx-auto mb-4 img-fluid"
+              src="images/david.png"
+              alt=""
+              width="250"
+              height="250"
+            />
+            <h1 class="display-7 fw-bold">David Gardenier</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">
+                Senior AI consultant · PhD in Astrophysics
+              </p>
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <a
+                  role="button"
+                  class="btn btn-outline-success btn-lg px-4 gap-3"
+                  href="about.html"
+                >
+                  About me
+                </a>
+                <a
+                  role="button"
+                  class="btn btn-outline-success btn-lg px-4"
+                  href="contact.html"
+                >
+                  Contact me
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
