--- a/about.html
+++ b/about.html
@@ -29,9 +29,7 @@
         >
           <li><a href="index.html" class="nav-link px-2 link-dark">Home</a></li>
           <li>
-            <a href="about.html" class="nav-link px-2 link-secondary"
-              >About</a
-            >
+            <a href="about.html" class="nav-link px-2 link-secondary">About</a>
           </li>
           <li>
             <a href="contact.html" class="nav-link px-2 link-dark">Contact</a>
@@ -40,7 +38,7 @@
       </header>
       <main>
         <div class="px-4 pb-5">
-          <div class="col">
+          <div class="col col-xxl-8 mx-auto">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-3">
               <div class="col d-flex align-items-start">
                 <div>
@@ -48,9 +46,9 @@
                   <p>
                     Python, Sql, Bash, Html, Css, Javascript or Latex? You name
                     it, I code it! I have extensive coding experience, from
-                    simulations to full-stack development. I have also supervised
-                    many starters, and led a MLOps-team of 30 people while
-                    working at Deloitte.
+                    simulations to full-stack development. I have also
+                    supervised many starters, and led a MLOps-team of 30 people
+                    while working at Deloitte.
                   </p>
                 </div>
               </div>
@@ -70,34 +68,37 @@
                   <h3 class="fs-2">I care</h3>
                   <p>
                     I have led clubs of over 200 people, from academics to
-                    Olympic athletes. I have developed and taught numerous courses. I have volunteered in multiple countries. Why? Because I thrive in situations where I can help others.
+                    Olympic athletes. I have developed and taught numerous
+                    courses. I have volunteered in multiple countries. Why?
+                    Because I thrive in situations where I can help others.
                   </p>
                 </div>
               </div>
             </div>
           </div>
-          <a
-                  role="button"
-                  class="btn btn-outline-success btn-lg px-4"
-                  href="https://www.linkedin.com/in/david-gardenier"
-                >
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin me-2" viewBox="0 0 16 16">
-  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"></path>
-</svg>
-                  View my LinkedIn profile
-                </a>
+          <div class="col col-xxl-8 mx-auto">
+            <a
+              role="button"
+              class="btn btn-outline-success btn-lg px-4"
+              href="https://www.linkedin.com/in/david-gardenier"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-linkedin me-2"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                ></path>
+              </svg>
+              View my LinkedIn profile
+            </a>
+          </div>
         </div>
       </main>
     </div>
   </body>
 </html>
-
-<!-- <div class="col">
-            <a
-                role="button"
-                class="btn btn-outline-secondary btn-lg px-4 gap-3"
-                href="https://www.linkedin.com/in/david-gardenier/"
-              >
-                LinkedIn
-            </a>
-          </div> -->
