--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     Python, Sql, Bash, Html, Css, Javascript or Latex? You name
                     it, I code it! I have extensive coding experience, from
                     simulations to full-stack development. I have also
-                    supervised many starters, and led a MLOps-team of 30 people
+                    supervised starters, and led a MLOps-team of 30 people
                     while working at Deloitte.
                   </p>
                 </div>
