--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
                   <p>
                     Curiosity drives me. From doing a PhD in astrophysics, to
                     giving a TEDx-talk, to tackling challenges at multinational
-                    companies: I enjoy discovering new topics, asking questions,
-                    and come up with solutions.
+                    companies: I enjoy discovering new topics, asking insightful questions,
+                    and come up with good solutions.
                   </p>
                 </div>
               </div>
@@ -67,10 +67,9 @@
                 <div>
                   <h3 class="fs-2">I care</h3>
                   <p>
-                    I have led clubs of over 200 people, from academics to
-                    Olympic athletes. I have developed and taught numerous
-                    courses. I have volunteered in multiple countries. Why?
-                    Because I thrive in situations where I can help others.
+                    I thrive in situations where I can help others. As a result, I have gained quite some experience with board work, having led clubs of over 200 people, from academics to
+                    Olympic athletes. I also enjoy teaching, having developed and taught numerous
+                    courses, both at universities and Deloitte. This all ties into my strong sense of duty.
                   </p>
                 </div>
               </div>
