--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                   <p>
                     I thrive in situations where I can help others. As a result, I have gained quite some experience with board work, having led clubs of over 200 people, from academics to
                     Olympic athletes. I also enjoy teaching, having developed and taught numerous
-                    courses, both at universities and Deloitte. This all ties into my strong sense of duty.
+                    courses. This all ties into my strong sense of duty.
                   </p>
                 </div>
               </div>
