--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 <div>
                   <h3 class="fs-2">I care</h3>
                   <p>
-                    I thrive in situations where I can help others. As a result, I have gained quite some experience with board work, having led clubs of over 200 people, from academics to
+                    I thrive in situations where I can help others. As a result, I have gained experience with board work, having led clubs of over 200 people, from academics to
                     Olympic athletes. I also enjoy teaching, having developed and taught numerous
                     courses. This all ties into my strong sense of duty.
                   </p>
