--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
                 <div>
                   <h3 class="fs-2">I care</h3>
                   <p>
-                    I thrive in situations where I can help others. As a result, I have gained experience with board work, having led clubs of over 200 people. I also enjoy teaching, having developed and taught numerous
-                    courses. This all ties into my strong sense of duty.
+                    I thrive in situations where I can help others. As a result, I have a fair amount of experience with board work, having led clubs of over 200 people. I also enjoy teaching, having developed and taught numerous
+                    courses. These roles all tie into my strong sense of duty.
                   </p>
                 </div>
               </div>
