Update job title

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1 class="display-7 fw-bold">David Gardenier</h1>
             <div class="col-lg-6 mx-auto">
               <p class="lead mb-4">
-                Data Engineer · PhD in Astrophysics
+                Data Scientist · PhD in Astrophysics
               </p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a
