--- a/about.html
+++ b/about.html
@@ -38,62 +38,47 @@
       </header>
       <main>
         <div class="px-4 pb-5">
-          <div class="col col-xxl-8 mx-auto">
-            <div class="row g-5 py-5 row-cols-1 row-cols-lg-3">
-              <div class="col d-flex align-items-start">
-                <div>
-                  <h3 class="fs-2">I code</h3>
-                  <p>
-                    Python, Sql, Bash, Html, Css, Javascript or Latex? You name
-                    it, I code it! I have extensive coding experience, from
-                    simulations to full-stack development. I have also
-                    supervised starters, and led a MLOps-team of 30 people
-                    while working at Deloitte.
-                  </p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <div>
-                  <h3 class="fs-2">I explore</h3>
-                  <p>
-                    Curiosity drives me. From doing a PhD in astrophysics, to
-                    giving a TEDx-talk, to tackling challenges at multinational
-                    companies: I enjoy discovering new topics, asking insightful questions,
-                    and come up with good solutions.
-                  </p>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <div>
-                  <h3 class="fs-2">I care</h3>
-                  <p>
-                    I thrive in situations where I can help others. As a result, I have a fair amount of experience with board work, having led clubs of over 200 people. I also enjoy teaching, having developed and taught numerous
-                    courses. These roles all tie into my strong sense of duty.
-                  </p>
-                </div>
-              </div>
+          <div class="col col-xxl-8 mx-auto py-5">
+            <h2 class="mb-4">I have found my career to orbit around three principles: building, discovering, and empowering.</h2>
+            <div class="mb-4">
+              <h3 class="fs-3">#building</h3>
+              <p>
+                I've led teams over 30+ people to create robust software solutions focused on giving value. Whether implementing MLOps frameworks from the ground up, or designing full-stack solutions, I bring a decade of experience across Python, SQL, and hands-on experience with modern cloud environments like Azure, AWS and GCP. I find my value in building up the teams and frameworks so they can aid others.
+              </p>
             </div>
-          </div>
-          <div class="col col-xxl-8 mx-auto">
-            <a
-              role="button"
-              class="btn btn-outline-success btn-lg px-4"
-              href="https://www.linkedin.com/in/david-gardenier"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-linkedin me-2"
-                viewBox="0 0 16 16"
+            <div class="mb-4">
+              <h3 class="fs-3">#discovering</h3>
+              <p>
+                My curiosity is my greatest tool. As a former astrophysicist with a TEDx-talk under my belt, I'm uniquely skilled at breaking down complex challenges and asking the right questions to find truly valuable solutions. This drive to explore new topics has been instrumental in my success at multinational companies.
+              </p>
+            </div>
+            <div class="mb-4">
+              <h3 class="fs-3">#empowering</h3>
+              <p>
+                I find my greatest fulfillment in helping others succeed. This sense of duty has led me to lead organizations of over 200 people, teach university courses I developed myself, and mentor dozens of developers. I find fulfillment in building and mentoring teams that make a difference.
+              </p>
+            </div>
+            <div class="mt-5">
+              <a
+                role="button"
+                class="btn btn-outline-success btn-lg px-4"
+                href="https://www.linkedin.com/in/david-gardenier"
               >
-                <path
-                  d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-                ></path>
-              </svg>
-              View my LinkedIn profile
-            </a>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-linkedin me-2"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                  ></path>
+                </svg>
+                View my LinkedIn profile
+              </a>
+            </div>
           </div>
         </div>
       </main>
